--- a/config.json
+++ b/config.json
@@ -1,8 +1,4 @@
 {
-  "APP": {
-    "version": 1.0
-  },
-  "UTILS":{
-    "ascii_and_digits": "abcdefghijklmnopqrstuvwxyz0123456789"
-  }
+  "ascii_and_digits": "abcdefghijklmnopqrstuvwxyz0123456789",
+  "date_format": "%Y-%m-%d %H:%M:%S"
 }
