* logger.py added with Logger class * folder structure changed

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 {
   "characters_for_generate_filename_function": "abcdefghijklmnopqrstuvwxyz0123456789",
   "date_format": "%Y-%m-%d %H:%M:%S",
-  "length_of_filename": 10
+  "length_of_filename": 10,
+  "logger_formatter": "%(asctime)s | %(name)s | %(levelname)s | %(message)s"
 }
