* config_parser unit tests

--- a/config/config.json
+++ b/config/config.json
@@ -8,6 +8,6 @@
   },
   "LOGGER": {
     "logger_formatter": "%(asctime)s | %(name)s | %(levelname)s | %(message)s",
-    "logs_path": "log.log"
+    "logs_path": "logs\\log.log"
   }
 }
