--- a/config/config.json
+++ b/config/config.json
@@ -9,5 +9,11 @@
   "LOGGER": {
     "logger_formatter": "%(asctime)s | %(name)s | %(levelname)s | %(message)s",
     "logs_path": "logs\\log.log"
+  },
+  "MAKE": {
+    "reports_path": "reports\\",
+    "flake8_report_name": "flake8_report.txt",
+    "coverage_report_folder": "coverage_report\\",
+    "flake8_excluded_dirs": ["\\env"]
   }
 }
