* SignedFileSystem fully implemented, but doesn't work for now, need to fix validation_signature * Small logger fix

--- a/config/config.json
+++ b/config/config.json
@@ -8,7 +8,7 @@
   },
   "LOGGER": {
     "logger_formatter": "%(asctime)s | %(name)s | %(levelname)s | %(message)s",
-    "logs_path": "logs\\log.log"
+    "logs_path": "log.log"
   },
   "MAKE": {
     "reports_path": "reports\\",
