--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 { "APP": {
-  "working_directory": "C:\\Users\\YPutrin\\Course_007\\file_system_app"
+  "working_directory": "{working_directory}",
+  "file_storage_folder": "file_storage"
 },
   "UTILS": {
     "characters_for_generate_filename_function": "abcdefghijklmnopqrstuvwxyz0123456789",
